Fixing potential overlap
Sometimes spell text can overlap spell school container, now overlapping is fixed

--- a/src/styles/spellCard.module.css
+++ b/src/styles/spellCard.module.css
@@ -141,7 +141,7 @@
     left: 0;
     right: 0;
     transform: translate(0%, 1050%);
-    z-index: 3;
+    z-index: 7;
     cursor: pointer;
 }
 
